--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2]
+      - uses: actions/checkout@v2
 
       - name: Create report file
-        run: date +%s > index.html
+        run: |
+          echo -n '<h1>' > index.html 
+          date +%s >> index.html
+          echo '</h1> >> index.html
 
       - name: Commit report
         run: |
